# zkDB

./: .cursorrules  .gitignore  Cargo.toml  README.md
.github/workflows/: lint.yml  prove.yml
crates/script/: Cargo.toml  build.rs  merkle_state.txt
crates/script/tests/: integration_tests.rs
crates/zkdb-bench/: Cargo.toml
crates/zkdb-bench/benches/: db_operations.rs
crates/zkdb-core/: Cargo.toml
crates/zkdb-core/src/: lib.rs
crates/zkdb-duckdb/: Cargo.toml
crates/zkdb-duckdb/src/: main.rs
crates/zkdb-lib/: Cargo.toml  build.rs
crates/zkdb-lib/src/: lib.rs
crates/zkdb-lib/tests/: merkle_tests.rs  storage_tests.rs
crates/zkdb-merkle/: Cargo.toml  README.md
crates/zkdb-merkle/src/: lib.rs  main.rs
crates/zkdb-merkle/tests/: integration_tests.rs
crates/zkdb-sled/: Cargo.toml
crates/zkdb-sled/src/: main.rs
crates/zkdb-store/: Cargo.toml
crates/zkdb-store/src/: file.rs  lib.rs  rocks.rs
docs/: getting-started.md  usage.md  what-is-vdb-framework.md  why.md
docs/design/: structure.md
elf/: riscv32im-succinct-zkvm-elf  zkdb-merkle
