[workspace]
members = [
    "crates/zkdb-merkle",
    "crates/zkdb-core",
    "crates/zkdb-lib",
]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "0.7.7"
rs_merkle = "1.4.2"
prettytable-rs = "0.10"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zkdb_core = { path = "crates/zkdb-core" }
zkdb_merkle = { path = "crates/zkdb-merkle" }
zkdb_lib = { path = "crates/zkdb-lib" }
clap = { version = "4.5.20", features = ["derive"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sp1-zkvm = "2.0.0"
base64 = { version = "0.13", features = ["alloc"] }
hex = { version = "0.4", features = ["alloc"] }
bincode = { version = "1.3" }
