[workspace]
members = [
    "crates/zkdb-core",
    "crates/zkdb-lib",
    "crates/zkdb-merkle",
    "crates/zkdb-store",
    "crates/zkdb-bench",
]
resolver = "2"

default-members = [
    "crates/zkdb-core",
    "crates/zkdb-lib",
]

[workspace.dependencies]
alloy-sol-types = "0.7.7"
rs_merkle = "1.4.2"
prettytable-rs = "0.10"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zkdb-core = { path = "crates/zkdb-core" }
zkdb-merkle = { path = "crates/zkdb-merkle" }
zkdb-lib = { path = "crates/zkdb-lib" }
zkdb-store = { path = "crates/zkdb-store" }
clap = { version = "4.5.20", features = ["derive"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sp1-zkvm = "3.0.0"
base64 = { version = "0.13", features = ["alloc"] }
hex = { version = "0.4", features = ["alloc"] }
bincode = { version = "1.3" }
sha2 = { version = "0.10" }