[package]
name = "zkdb-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["serde/std", "serde_json/std"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
