[package]
name = "zkdb_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zkdb_core = { workspace = true }
zkdb_merkle = { workspace = true }

[[bin]]
name = "cli"
path = "src/bin/cli.rs"