[package]
name = "zkdb_lib"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
sp1-sdk = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zkdb_core = { workspace = true }
clap = { workspace = true }
bincode = { workspace = true }
chrono = "0.4"
tracing = { workspace = true }
hex = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "cli"
path = "src/bin/cli.rs"