[package]
name = "zkdb-lib"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
sp1-sdk = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zkdb-core = { workspace = true }
zkdb-merkle = { workspace = true }
zkdb-store = { workspace = true }
clap = { workspace = true }
bincode = { workspace = true }
chrono = "0.4"
tracing = { workspace = true }
hex = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
sha2 = { workspace = true }

[dev-dependencies]
serial_test = "2.0"
tempfile = "3.8"
rs_merkle = { workspace = true }


[[bin]]
name = "cli"
path = "src/bin/cli.rs"