[package]
version = "0.1.0"
name = "zkdb_merkle"
edition = "2021"

[dependencies]
sp1-zkvm = { workspace = true }
rs_merkle = { workspace = true }
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true, features = ["alloc"] }
base64 = { workspace = true, features = ["alloc"] }
hex = { workspace = true, features = ["alloc"] }
bincode = { workspace = true }
zkdb_core = { workspace = true }
