[package]
name = "zkdb_merkle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zkdb_merkle"
path = "src/main.rs"

[dependencies]
sp1-zkvm = { workspace = true }
rs_merkle = { workspace = true }
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true, features = ["alloc"] }
base64 = { workspace = true, features = ["alloc"] }
hex = { workspace = true, features = ["alloc"] }
bincode = { workspace = true }
zkdb_core = { workspace = true }
